# SimFish

./: .containerignore  .gitignore  README.md  render_preview.py
.claude/: settings.local.json
.github/workflows/: release.yml
container/: Containerfile  entrypoint.sh
data-schemas/: README.md
data-schemas/schemas/: plant.schema.json
docs/: GOALS.md  index.html  style.css
shaders-godot/: README.md  sim_driver.gd
shaders-godot/godot-project/: export_presets.cfg  main.tscn  project.godot  tank_menu.tscn
shaders-godot/godot-project/scripts/: algae.gd  algae.gd.uid  ambient_audio.gd  ambient_audio.gd.uid  aquascape_controller.gd  aquascape_controller.gd.uid  branch_plant.gd  cattail_plant.gd  cattail_plant.gd.uid  coral.gd  coral.gd.uid  creature_creator.gd  creature_creator.gd.uid  egg.gd  evolution_pressure.gd  evolution_pressure.gd.uid  fish.gd  fish_store.gd  fish_store.gd.uid  floating_plant.gd  floating_plant.gd.uid  fractal_moss.gd  fractal_moss.gd.uid  hud_controller.gd  hud_controller.gd.uid  leaf_shapes.gd  leaf_shapes.gd.uid  library_panel.gd  library_panel.gd.uid  lily_pad.gd  lily_pad.gd.uid  lineage_tree_view.gd  main.gd  (+57 more)
sim-rust/: Cargo.toml  README.md
steam/: README.md  app_build.vdf.template  depot_build_linux.vdf.template  depot_build_mac.vdf.template  depot_build_win.vdf.template  depot_ids.env  depot_ids.env.example  install_godotsteam.sh  stage_content.sh  upload.sh
steam/store/: STORE_PAGE.md  browser_upload.py  generate_assets.py  serve_assets.py  upload_assets_playwright.py  upload_assets_requests.py
style-guide/: STYLE_GUIDE.md
(+16 files in other folders)
